Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      [ 4807.409752] Lustre: DEBUG MARKER: == sanity-quota test 58: project ID should be kept for new mirrors created by FID ========================================================== 11:35:03 (1747222503)
      [ 4830.060860] LustreError: 209481:0:(file.c:247:ll_close_inode_openhandle()) lustre-clilmv-ffffa14321959000: inode [0x200000402:0xac:0x0] mdc close failed: rc = -22
      [ 4862.402504] LustreError: 208470:0:(tgt_grant.c:747:tgt_grant_check()) lustre-OST0001: cli 831833f0-57a0-4b15-a54d-0495fe540af1 claims 1703936 GRANT, real grant 0
      [ 4862.402818] LustreError: 208470:0:(tgt_grant.c:747:tgt_grant_check()) Skipped 1 previous similar message
      [ 4866.462179] LustreError: 197114:0:(tgt_grant.c:747:tgt_grant_check()) lustre-OST0001: cli 831833f0-57a0-4b15-a54d-0495fe540af1 claims 1703936 GRANT, real grant 0
      [ 4866.462538] LustreError: 197114:0:(tgt_grant.c:747:tgt_grant_check()) Skipped 17 previous similar messages
      [ 4868.071119] LustreError: 208455:0:(tgt_grant.c:560:tgt_grant_incoming()) lustre-OST0001: cli 831833f0-57a0-4b15-a54d-0495fe540af1/ffffa143835ce800 dirty 11927552 pend 0 grant -1703936
      [ 4868.071286] LustreError: 208455:0:(tgt_grant.c:562:tgt_grant_incoming()) LBUG
      [ 4868.071333] CPU: 0 PID: 208455 Comm: ll_ost_io00_005 Tainted: G           O     --------- -  - 4.18.0 #12
      [ 4868.071381] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.16.3-3.fc41 04/01/2014
      [ 4868.071436] Call Trace:
      [ 4868.071477]  dump_stack+0x6e/0xa0
      [ 4868.071510]  lbug_with_loc.cold.4+0x5/0x4e [libcfs]
      [ 4868.071557]  tgt_grant_incoming.isra.1+0x575/0x580 [ptlrpc]
      [ 4868.071686]  tgt_grant_prepare_write+0x397/0xf30 [ptlrpc]
      [ 4868.071804]  ofd_preprw+0xa47/0x27f0 [ofd]
      [ 4868.071848]  tgt_brw_write+0xda5/0x2720 [ptlrpc]
      [ 4868.071971]  ? tgt_request_preprocess.isra.1+0xdd/0x1440 [ptlrpc]
      [ 4868.072093]  tgt_request_handle+0x36c/0x1af0 [ptlrpc]
      [ 4868.072207]  ptlrpc_main+0x109b/0x3570 [ptlrpc]
      [ 4868.072320]  ? trace_hardirqs_on+0x1c/0xe0
      [ 4868.072350]  ? _raw_spin_unlock_irqrestore+0x43/0x70
      [ 4868.072385]  ? ptlrpc_wait_event+0x530/0x530 [ptlrpc]
      [ 4868.072495]  kthread+0x16e/0x1a0
      [ 4868.072530]  ? set_kthread_struct+0x40/0x40
      

      bisected to https://review.whamcloud.com/c/fs/lustre-release/+/56547

      Attachments

        Activity

          [LU-19016] tgt_grant_incoming()) LBUG
          pjones Peter Jones added a comment -

          Merged for 2.17

          pjones Peter Jones added a comment - Merged for 2.17

          "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/59234/
          Subject: LU-19016 target: reset o_grant if no grant is returned
          Project: fs/lustre-release
          Branch: master
          Current Patch Set:
          Commit: a91c46a7da131208c17843b07f635ecf25baf097

          gerrit Gerrit Updater added a comment - "Oleg Drokin <green@whamcloud.com>" merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/59234/ Subject: LU-19016 target: reset o_grant if no grant is returned Project: fs/lustre-release Branch: master Current Patch Set: Commit: a91c46a7da131208c17843b07f635ecf25baf097

          "Alex Zhuravlev <bzzz@whamcloud.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/59234
          Subject: LU-19016 target: reset o_grant if no grant is returned
          Project: fs/lustre-release
          Branch: master
          Current Patch Set: 1
          Commit: c8238be88add037265e5218725a7e2f3c4420d2f

          gerrit Gerrit Updater added a comment - "Alex Zhuravlev <bzzz@whamcloud.com>" uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/59234 Subject: LU-19016 target: reset o_grant if no grant is returned Project: fs/lustre-release Branch: master Current Patch Set: 1 Commit: c8238be88add037265e5218725a7e2f3c4420d2f

          People

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: